fixed developer sidebar, app screenshots

--- a/Chalkable.Web/assets/jade/activities/apps/AppPicture.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppPicture.jade
@@ -1,4 +1,4 @@
-mixin Thumbnail(id, url, title, dimsX, dimsY, pictureCls, readOnly)
+mixin Thumbnail(url, title, dimsX, dimsY, pictureCls, readOnly)
     .thumbnail(class=pictureCls)
         if !readOnly
             +ActionLink('apps', 'deletePicture', [title, dimsX, dimsY]).close-btn
@@ -7,15 +7,15 @@ mixin Thumbnail(id, url, title, dimsX, dimsY, pictureCls, readOnly)
 
 mixin IconBox(id, url, title, dimsX, dimsY, pictureCls, readOnly)
     +Hidden('app' + title + 'Id', id.valueOf())
-    if id.valueOf()
-        +Thumbnail(id, url, title, dimsX, dimsY, pictureCls, readOnly)
+    if id.valueOf() || readOnly
+        +Thumbnail(url, title, dimsX, dimsY, pictureCls, readOnly)
     else
         .upload-img-block
             .top=dimsX + "px x " + dimsY + "px"
             .bottom
                 button.simple-gray-button.file=title
                     +FileUpload('apps', 'uploadPicture', [dimsX, dimsY, title]).simple-gray-button
-                    +ActionLink('apps', 'd', id) Download Attachment
+                +ActionLink('apps', 'd', id) Download Template
 
 
 
