--- a/Chalkable.Web/assets/jade/activities/apps/AppScreenshots.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppScreenshots.jade
@@ -16,7 +16,7 @@ mixin ScreenshotUploadBox(title, dimsX, dimsY, screenshots)
         .bottom
             button.simple-gray-button.file=title
                 +FileUpload('apps', 'uploadScreenshot', [screenshots.ids]).simple-gray-button
-                +ActionLink('apps', 'd', 'b') Download Attachment
+            +ActionLink('apps', 'd', 'b') Download Template
     +Hidden('appScreenshots', screenshots.ids)
     each item in self.items
         +ScreenshotBox(item.getPictureId(), item.getPictureUrl(), item.getPictureClass(), screenshots.ids, !item.isEditable())
