adding styles to messages.

--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -34,6 +34,7 @@
 @import "partials/main/popups/_add_app_category";
 
 @import "partials/main/messages/_list";
+@import "partials/main/messages/_add";
 
 
 BODY {
