fixed app wrapper

--- a/Chalkable.Web/assets/jade/activities/apps/app-wrapper-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-wrapper-dialog.jade
@@ -7,6 +7,6 @@
                 a(id=btn.getId(), target = btnTarget, href= url)=btn.getTitle()
         .x-close-btn.close
     .iframe-wrap
-        iframe
+        iframe(src=self.app.getUrl())
 
 
