--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -32,6 +32,7 @@
 @import "partials/main/popups/_add_district";
 @import "partials/main/popups/_add_department";
 @import "partials/main/popups/_add_app_category";
+@import "partials/main/popups/_attach_app";
 
 @import "partials/main/messages/_list";
 
