--- a/Chalkable.Web/assets/sass/partials/main/_profile.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_profile.scss
@@ -430,6 +430,7 @@ BODY {
 
               .section-buttons{
                 .chlk-button{
+                  cursor: pointer;
                   margin: 100px 5px 0 0;
 
                   BUTTON{
