fixed developer profile

--- a/Chalkable.Web/assets/jade/activities/profile/DeveloperProfile.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/DeveloperProfile.jade
@@ -12,7 +12,7 @@
                 input(name="email", value=self.email)
             div
                 label Developer web site
-                input(name="website", value=self.webSite)
+                input(name="websitelink", value=self.webSite)
             div.align-right
                 Button Save
         div.bg-line
