add empty app market details page

--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -3,7 +3,6 @@
     .search-wrapper
         #search-bar
             +SearchBox(chlk.services.SearchService, "search", chlk.templates.search.SiteSearch)#siteSearch(name="siteSearch")
-
     .wrapper
         +ActionLink('announcement','add').fullwidth-button.add-new
         .buttons-row
@@ -12,7 +11,7 @@
             +ActionLink('students', 'all').one-third-button.people(title="View People") People
         .buttons-row
             +ActionLink('grading', 'teacherSettings').one-third-button.statistic(title="View Grades") Grades
-            +ActionLink('app-market', 'list').one-third-button.apps(title="View Apps") Apps
+            +ActionLink('appmarket', 'list').one-third-button.apps(title="View Apps") Apps
             +ActionLink('settings', 'dashboardTeacher').one-third-button.settings(title="View Settings") Settings
         .buttons-row
             +ActionLink('attendance', 'summary').one-third-button.attendance(title="View Attendance") Attendance
