--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -35,6 +35,7 @@
 @import "partials/main/popups/_attach_app";
 
 @import "partials/main/messages/_list";
+@import "partials/main/messages/_add";
 
 
 BODY {
