--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -189,7 +189,7 @@
                 var cfgObject = {
                     "prettyStackTraces": true,
                     "checkedMode": false,
-                    "enablePipelineMethodCall": false,
+                    "enablePipelineMethodCall": true,
                     "AssertWithExceptions": true,
                     "#mvc": @RenderSection("MVCSettings", false)
                 };
