--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/DayPeriodPopUp.jade
@@ -1,8 +1,8 @@
 .calendar-popup
-    announcementclassperiod = self.getAnnouncementClassPeriods()[0];
-    announcements = announcementclassperiod.getAnnouncements();
-    period = self.getPeriod();
-    roomNumber = announcementclassperiod.getClassPeriod().getRoomNumber();
+    announcementclassperiod = self.getAnnouncementClassPeriods()[0]
+    announcements = announcementclassperiod.getAnnouncements()
+    period = self.getPeriod()
+    roomNumber = announcementclassperiod.getClassPeriod().getRoomNumber()
     .class-name
         h3.day-day
             clazz = announcementclassperiod.getClassPeriod().getClazz();
