--- a/Chalkable.Web/assets/jade/activities/feed/Feed.jade
+++ b/Chalkable.Web/assets/jade/activities/feed/Feed.jade
@@ -1,6 +1,5 @@
 .feed-container
-    -isNotStudent = true;
-    -console.info(self.items);
+    isNotStudent = true;
     .action-bar.not-transparent
         .container.panel-bg
             .feed-notifications Notifications
