--- a/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
@@ -1,7 +1,7 @@
 .attendance-summary
     topData = self.getTopData();
     topItems = topData.getTopItems();
-    +LeftRightToolbar(topItems, chlk.templates.class.TopBar, 'attendance', 'classList')(
+    +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'attendance', 'classList')(
         selectedItemId=""
     ).classes-bar
     summary = self.getSummary();
