--- a/Chalkable.Web/assets/jade/activities/setup/TeacherSettings.jade
+++ b/Chalkable.Web/assets/jade/activities/setup/TeacherSettings.jade
@@ -4,7 +4,7 @@
     selectedIndex = 0;
     gradingInfo = self.getGradingInfo();
     .loader
-    +LeftRightToolbar(topItems, chlk.templates.class.TopBar)(
+    +LeftRightToolbar(topItems, chlk.templates.classes.TopBar)(
         selectedItemId=gradingInfo.getClazz().getId().valueOf(),
         pressAfterClick=false
     ).classes-bar
