--- a/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
@@ -46,4 +46,4 @@ else
         .today-work-panel
             h2.stats=Msg.Classes
             .classes-tb
-                +LeftRightToolbar(self.getClassesSection(), chlk.templates.class.Class).centered
+                +LeftRightToolbar(self.getClassesSection(), chlk.templates.classes.Class).centered
