--- a/Chalkable.Web/assets/sass/partials/main/popups/_attach_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/popups/_attach_app.scss
@@ -35,6 +35,10 @@
         border-bottom-left-radius: 7px;
         border-bottom-right-radius: 7px;
 
+        .paging{
+          padding-left: 25px;
+          padding-right: 25px;
+        }
 
         .apps{
           padding: 15px 25px;
