--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -37,6 +37,8 @@
 @import "partials/main/messages/_list";
 @import "partials/main/messages/_add";
 
+@import "partials/main/search/_common";
+
 
 BODY {
   DIV.page{
