--- a/Chalkable.Web/assets/jade/sidebars/SiteSearch.jade
+++ b/Chalkable.Web/assets/jade/sidebars/SiteSearch.jade
@@ -1,13 +1,27 @@
 li(data-title = self.description, data-value = self.id.valueOf() + '|' + self.searchType.valueOf(), style="background: white")
-    div
+    div.site-search
         if self.searchType == 0
             if self.roleId == 2
                 +ActionLink('teachers', 'info', self.id).left.image-container.white.shadow
-                    img.avatar.avatar47(class=self.gender, src=self.getPictureURL(self.id, 47))
-                    div= self.description
+                    div.site-search-person
+                        img.avatar.avatar47(class=self.gender, src=self.getPictureURL(self.id, 47))
+                        div= self.description
             if self.roleId == 3
                 +ActionLink('students', 'info', self.id).left.image-container.white.shadow
-                    img.avatar.avatar47(class=self.gender, src=self.getPictureURL(self.id, 47))
+                    div.site-search-person
+                        img.avatar.avatar47(class=self.gender, src=self.getPictureURL(self.id, 47))
+                        div= self.description
+        else if self.searchType == 4
+            +ActionLink('class', 'details', self.id).left.image-container.white.shadow
+                div.site-search-class
+                    .img-wrapper
+                        +ClassImg(self.course, 45, 80).avatar
+                    div= self.description
+        else if self.searchType == 3
+            +ActionLink('announcement', 'view', self.announcementId).left.image-container.white.shadow
+                div.site-search-class
+                    .img-wrapper
+                        +ClassImg(self.course, 45, 80).avatar
                     div= self.description
         else
             div= self.description
