--- a/Chalkable.Web/Content/screen.css
+++ b/Chalkable.Web/Content/screen.css
@@ -7723,6 +7723,29 @@ ul.ui-autocomplete > li > div.site-search > a > div.site-search-class > div {
   font-size: 11px;
   font-weight: bold;
 }
+/* line 57, ../assets/sass/partials/main/search/_common.scss */
+ul.ui-autocomplete > li > div.site-search > a > div.site-search-attachment {
+  margin-top: 20px;
+  padding-left: 15px;
+}
+/* line 60, ../assets/sass/partials/main/search/_common.scss */
+ul.ui-autocomplete > li > div.site-search > a > div.site-search-attachment > div.image {
+  display: inline-block;
+  vertical-align: middle;
+  background: url("images/feed/doc-icon.png");
+  background-size: 100% 100%;
+  width: 24px;
+  height: 36px;
+}
+/* line 68, ../assets/sass/partials/main/search/_common.scss */
+ul.ui-autocomplete > li > div.site-search > a > div.site-search-attachment > div.title {
+  margin-left: 10px;
+  display: inline-block;
+  vertical-align: middle;
+  color: #2f424b;
+  font-size: 11px;
+  font-weight: bold;
+}
 
 /* line 48, ../assets/sass/partials/_main.scss */
 BODY DIV.page > DIV#content DIV#content-wrapper.profile #main-top, BODY DIV.page > DIV#content DIV#content-wrapper.profile #footer {
