--- a/Chalkable.Web/assets/sass/partials/main/search/_common.scss
+++ b/Chalkable.Web/assets/sass/partials/main/search/_common.scss
@@ -53,6 +53,27 @@ ul.ui-autocomplete{
             font-weight: bold;
           }
         }
+
+        >div.site-search-attachment{
+          margin-top: 20px;
+          padding-left: 15px;
+          >div.image{
+            display: inline-block;
+            vertical-align: middle;
+            background: url("images/feed/doc-icon.png");
+            background-size: 100% 100%;
+            width: 24px;
+            height: 36px;
+          }
+          >div.title{
+            margin-left: 10px;
+            display: inline-block;
+            vertical-align: middle;
+            color: #2f424b;
+            font-size: 11px;
+            font-weight: bold;
+          }
+        }
       }
 
 
