updated to latest ria and compiler

--- a/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
+++ b/Chalkable.Web/Views/Shared/_RoleLayout.cshtml
@@ -190,9 +190,9 @@
                 scr.src = appUrl;
                 
                 var cfgObject = {
-                    "prettyStackTraces": true,
+                    "prettyStackTraces": false,
                     "checkedMode": false,
-                    "enablePipelineMethodCall": true,
+                    "enablePipelineMethodCall": false,
                     "AssertWithExceptions": true,
                     "#mvc": @RenderSection("MVCSettings", false)
                 };
