--- a/Chalkable.Web/assets/jade/activities/apps/app-wrapper-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-wrapper-dialog.jade
@@ -4,7 +4,10 @@
             each btn in self.buttons
                 btnTarget = btn.isTargetBlank() ? "_blank" : undefined
                 url = btn.getUrl() ? btn.getUrl() : "javascript:void(0)"
-                a(id=btn.getId(), target = btnTarget, href= url)=btn.getTitle()
+                a(id=btn.getId(),
+                target = btnTarget,
+                href= url,
+                data-announcement-id=self.announcementId.valueOf())=btn.getTitle()
         .x-close-btn.close
     .iframe-wrap
         iframe(src=self.app.getUrl())
