--- a/Chalkable.Web/assets/jade/activities/apps/attach-app-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/attach-app-dialog.jade
@@ -1,5 +1,6 @@
-mixin AppIconLink(app)
-   +ActionLink('apps', 'tryToAttach', [app.getId()]).app-icon-link
+mixin AppIconLink(announcementId, app)
+   appId = app.getId().valueOf()
+   +ActionLink('apps', 'tryToAttach', [announcementId, appId]).app-icon-link
         .app-list-item
             .icon
                 pictureUrl = self.getPictureURL(app.getSmallPictureId(), 74, 74)
@@ -9,6 +10,7 @@ mixin AppIconLink(app)
                 .shortdesc=app.getShortDescription()
 
 teacherId = self.teacherId.valueOf()
+announcementId = self.announcementId.valueOf()
 .dialog.attach-app
     .x-window-header
         a.close.close-btn
@@ -16,7 +18,7 @@ teacherId = self.teacherId.valueOf()
         .header Attach an App
         .apps
             each app in self.apps.getItems()
-                +AppIconLink(app)
+                +AppIconLink(announcementId, app)
         .paging
-            +Paginator('announcement', 'listAvailableForAttachPage', self.apps, [teacherId])
+            +Paginator('announcement', 'listAvailableForAttachPage', self.apps, [teacherId, announcementId])
 
